--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will be utilized for the final capstone project of the IBM Data Science Certificate"
+    "IBM Data Science Certificate"
    ]
   },
   {
